# skills

./: .gitignore  .ignore  CHANGELOG.md  CLIENT_SETUP.md  README.md
academic-jobs/: README.md  SKILL.md  pyproject.toml
academic-jobs/ajo/: __init__.py  classify.py  cli.py  config.py  db.py  fetch.py  inspire.py
academic-jobs/references/: curation.md  fetch.md  presets.md  schema.md
academic-slides/: SKILL.md
academic-slides/assets/: deck_style.py  global-bottom.vue  global-top.vue  package.json  slides.template.md  style.css
adversarial-review/: SKILL.md
bibtex-gen/: SKILL.md
commit-triage/: SKILL.md
concept-explainer/: SKILL.md
dropbox/: SKILL.md
friendly-slide-illustrator/: SKILL.md
handdrawn-schematic/: SKILL.md
hep-rumor-mill/: README.md  SKILL.md  pyproject.toml
hep-rumor-mill/prm/: __init__.py  classify.py  cli.py  db.py  inspire.py  metrics.py  openalex.py  orcid_api.py  semantic_scholar.py  sheet.py
hep-rumor-mill/references/: analysis.md  metrics.md  schema.md  sheets.md
hermes-tweet-signal/: SKILL.md
journal-club-review/: SKILL.md
md2pdf-typora/: SKILL.md  typora-whitey.css
morgen/: SKILL.md
overleaf-section-workflow/: SKILL.md
overleap/: SKILL.md
paperbanana/: SKILL.md
proton-mail/: SKILL.md
reference-search/: SKILL.md
research-backup/: SKILL.md
research-log/: SKILL.md
research-portal/: SKILL.md
research-report/: SKILL.md
scienceplot-py/: SKILL.md
vastai/: SKILL.md
wide-slide-illustrator/: SKILL.md
workshop-paper-review/: SKILL.md
xkcd-py/: SKILL.md
zai-web-search/: SKILL.md
(+140 files in other folders)
