[project]
name = "academic-jobs"
version = "0.1.0"
description = "Fetch valid (still-open) postings from Academic Jobs Online (academicjobsonline.org)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
ajo = "ajo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ajo"]
