[project]
name = "hep-rumor-mill"
version = "0.1.0"
description = "Analyze the HEP-theory postdoc rumor mill: who got offers where, and what their publication records look like."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
prm = "prm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prm"]
